syntax="proto3";
option java_package="com.example.finaldemo.proto";
option java_multiple_files=true;
import "assetDTO.proto";

message AssetPageResponse{
    optional string token=1;
    repeated AssetDTO items=2;
    optional string reverse_token=3;
    optional bool has_next=4;
    optional bool has_prev=5;
}
